# tox3

./: .appveyor.yml  .coverage  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.rst  TODO.md  appveyor.yml  magic.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
doc/: cli.rst  conf.py  config.rst  index.rst
src/tox3/: __init__.py  __main__.py  build.py  config.py  env.py  evaluate.py  interpreters.py  util.py  venv.py
src/tox3/config/: __init__.py  cli.py  models.py  project.py  state.py  util.py
src/tox3/config/models/: core.py  env.py  env_build.py  env_run.py  tox.py  venv.py
src/tox3/config/static/: __init__.py  cli.py
src/tox3/env/: __init__.py  build.py  run.py  util.py
src/toxn/: __init__.py  __main__.py  evaluate.py  interpreters.py
src/toxn/config/: __init__.py  cli.py  util.py
src/toxn/config/models/: env_build.py  env_run.py  task.py  task_base.py  task_build.py  tox.py  toxn.py  venv.py
src/toxn/config/models/task/: base.py  build.py  run.py
src/toxn/env/: build.py  run.py  util.py
src/toxn/evaluate/: __init__.py  list_tasks.py  run_tasks.py
src/toxn/task/: __init__.py  build.py  interpreters.py  run.py  util.py  version.py
src/toxn/task/env/: api.py
src/toxn/task/env/venv_pip/: venv_pip.py
tests/: conftest.py  test_config.py  test_evaluate.py  test_interpreters.py  test_main.py  test_z_integration.py
tests/config/: test_cli.py  test_config.py  test_config_util.py  test_core.py  test_models_env.py  test_project.py
tests/config/env/: test_config_env_run.py
tests/config/models/: test_env.py
tests/config/static/: test_project.py
tests/config/task/: test_config_env_run.py
tests/integration/: test_flit.py  test_setuptools.py
