[build-system]
requires = ['setuptools >= 38.2.4']
build-backend = 'setuptools.build_meta'

[tool.tox3]
envlist = ['py36', 'type']

[tool.tox3.env]
description = 'run the unit tests with pytest'
install_command = "pip install -U"
extras = ['testing']
commands = ['pytest --cov="<envsitepackagesdir>/tox3" --cov-report=term-missing:skip-covered tests <posargs>']

[tool.tox3.env.set_env]
COVERAGE_FILE="<work_dir>/.coverage.<envname>"


[tool.tox3.env._build]
basepython = 'python3.6'
build_wheel = true

[tool.tox3.env.type]
basepython = 'python3.6'
deps = ["mypy >= 0.560, <1"]
commands = ["python -m mypy src --strict"]

[tool.tox3.env.dev]
basepython = 'python3.6'
extras = ['testing']
usedevelop = true
install_build_requires = true
install_for_build_requires = true
commands = ["pip list --format=columns",
           "python -c 'import sys;print(sys.version);print(sys.executable)'"]

